# dotfiles

./: .gitignore  .tmux.conf  .vimrc  .zshrc  Application Blizzard.lnk  README.md  general.vim  i3  init.vim  install.ps1  install.py  install.sh  mappings.vim  plugins.vim  polybar  pyproject.toml  vimrc  zshrc
.emacs.d/: init.el
.emacs.d/lisp/: init-company.el  init-evil.el  init-flycheck.el  init-ivy.el  init-projectile.el  init-python-mode.el  init-theme.el
.vim/config/: general.vimrc  init.vimrc  mappings.vimrc  plugins.vimrc
.vim/sessions/: EzLogging.vim
Powershell/: Microsoft.PowerShell_profile.ps1
WindowsTerminal/: settings.json
autohotkey/: better_virtual_desktops.ahk
csgo/: autoexec.cfg  training.cfg
dotfiles/Powershell/: Microsoft.PowerShell_profile.ps1
dotfiles/WindowsTerminal/: settings.json
dotfiles/bash/: bashrc
dotfiles/csgo/: autoexec.cfg
dotfiles/ghostty/: config
dotfiles/glaze-wm-3/: config.yaml
dotfiles/glazewm/: config.yaml
dotfiles/nushell/: config.nu  env.nu
dotfiles/nvim/: init.lua  (+2 more)
glaze-wm/: config.yaml
i3/: config  reddit-wallpaper.sh
komorebi/: komorebi.json
nvim/: coc-settings.json  coc.vim  config.tsx  general.vim  init.lua  init.vim  lazy-lock.json  mappings.vim  oni.vim  plugins.vim  test.py  vimonly.vim
oh-my-posh/: muream.json
polybar/: config  launch.sh  music.sh
profiles/: linux.toml  windows.toml
starship/: starship.toml
tmux/: nickNisiTmux.conf  themes.sh  tmux-sessionizer  tmux.conf
wezterm/: sessionizer.nu  wezterm.lua
whkd/: whkdrc
yasb/: config.yaml  styles.css
zsh/: .zshrc
(+160 files in other folders)
